lombok dependency issue fix and java issue fix